tests/toy/neg/000913_mutation.toylang
program a = { if else a then sleep; } .
